--- a/src/js/component/common/menu/menu.html
+++ b/src/js/component/common/menu/menu.html
@@ -1,11 +1,13 @@
-<section class="logo">
-  <picture>
-    <img src="" alt="logo">
-  </picture>
-  <span>MENÚ</span>
-</section>
-<section class="modal">
-  <span>uno</span>
-  <span>dos</span>
-  <span>tres</span>
-</section>
+<main class="menu">
+  <section class="menu-logo">
+    <a href="#/">
+      <img src="" alt="logo">
+    </a>
+    <span>MENÚ</span>
+  </section>
+  <section class="menu-modal">
+    <span>uno</span>
+    <span>dos</span>
+    <span>tres</span>
+  </section>
+</main>
