--- a/src/js/component/pages/home/home.html
+++ b/src/js/component/pages/home/home.html
@@ -1,1 +1,18 @@
-<h1>home</h1>
+<main class="home">
+  
+  <section class="home-nav">
+    <a ng-href="#/productos">productos</a>
+    <a ng-href="#/recetas">recetas</a>
+    <a ng-href="#/contacto">contacto</a>
+  </section>
+  <section class="home-nav-secondary">
+    <p ng-click="">Más información</p>
+    <ul>
+      <li><a ng-href="#/">Empresa</a></li>
+      <li><a ng-href="#/">Uso y manipulación segura</a></li>
+      <li><a ng-href="#/">Registro y Calificación</a></li>
+      <li><a ng-href="#/">Denuncias Anónimas</a></li>
+    </ul>
+    <!-- <footer>@ Copyright Sopraval 2018</footer> -->
+  </section>
+</main>
