--- a/src/js/component/pages/productos/productos.html
+++ b/src/js/component/pages/productos/productos.html
@@ -1,1 +1,8 @@
-<h1>productos</h1>
+<main class="productos">
+  <nav>
+    <a ng-href="#/productos/tradicional">Tradicional</a>
+    <a ng-href="#/productos/jamones-pechugas">Jamones y Pechugas</a>
+    <a ng-href="#/productos/parrilleros">Parrilleros</a>
+    <a ng-href="#/productos/practicos">Prácticos</a>
+  </nav>
+</main>
