--- a/src/js/component/pages/categoria/categoria.html
+++ b/src/js/component/pages/categoria/categoria.html
@@ -2,5 +2,5 @@
   <section class="categoria-titulo">
     {{$ctrl.categoria}}
   </section>
-  <lista datos="{{$ctrl.productos}}" tipo="" url={{$ctrl.urlAll}}></lista>
+  <lista tipo="producto" url={{$ctrl.urlAll}}></lista>
 </main>
