--- a/src/js/component/pages/producto/producto.html
+++ b/src/js/component/pages/producto/producto.html
@@ -5,5 +5,5 @@
   <section class="producto-info">
     {{$ctrl.producto.titulo}}
   </section>
-  <lista datos="{{$ctrl.productos}}" tipo="producto" url={{$ctrl.urlAll}}></lista>
+  <lista tipo="productos" url={{$ctrl.urlAll}}></lista>
 </main>
