--- a/src/css/pages/productos.scss
+++ b/src/css/pages/productos.scss
@@ -1,52 +1,4 @@
 .productos{
-  background-image: url('../img/fondos/f-productos.jpg');
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-  transition: background-image ease-out $animationtime;
-  nav{
-    align-items: center;
-    background-color: rgba(0, 0, 0, .5);
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 12.5rem 2rem 0;
-    width: 16rem;
-  }
-  ul{
-    font-family: $altfont;
-    margin: 3rem 0 0;
-    text-align: center;
-  }
-  li{
-    &:not(:last-child){
-      margin-bottom: 1.5rem;
-    }
-  }
-  a{
-    font-size: 1.8rem;
-    text-shadow: -3px 2px #222;
-    &:hover{
-      color: $color-base;
-    }
-  }
-  &.tradicional{
-    background-image: url('../img/fondos/f-tradicional.jpg');
-  }
-  &.jamones-pechugas{
-    background-image: url('../img/fondos/f-jamones-pechugas.jpg');
-  }
-  &.parrilleros{
-    background-image: url('../img/fondos/f-parrilleros.jpg');
-  }
-  &.practicos{
-    background-image: url('../img/fondos/f-practicos.jpg');
-  }
+  @extend %pages;
+  background-color: green;
 }
-
-.animation-productos{
-  
-  }
