--- a/src/js/component/app/app.html
+++ b/src/js/component/app/app.html
@@ -1,7 +1,6 @@
 <menu></menu>
-
 <main ng-view class="view" ng-class="{
   'animation-fade': $ctrl.animation.fade,
+  'animation-slideIn': $ctrl.animation.slideIn,
   'animation-slideOut': $ctrl.animation.slideOut,
-  'animation-slideIn': $ctrl.animation.slideIn
 }"></main>
