--- a/src/js/component/common/menu/menu.html
+++ b/src/js/component/common/menu/menu.html
@@ -1,6 +1,6 @@
 <main class="menu">
   <section class="menu-logo">
-    <a href="#/">
+    <a ng-click="$ctrl.back()">
       <img src="" alt="logo">
     </a>
     <span>MENÚ</span>
