--- a/src/css/pages/common/animaciones.scss
+++ b/src/css/pages/common/animaciones.scss
@@ -1,30 +1,38 @@
 
 .animation-fade{
   &.ng-enter {
-    opacity: 0
+    opacity: 0;
+    transform: translateX(0)
   }
   &.ng-enter-active {
-    opacity: 1
+    opacity: 1;
+    transform: translateX(0)
   }
   &.ng-leave {
-    opacity: 1
+    opacity: 1;
+    transform: translateX(0)
   }
   &.ng-leave-active {
-    opacity: 0
+    opacity: 0;
+    transform: translateX(0)
   }
 }
 .animation-slide{
   &In{
     &.ng-enter {
+      opacity: 1;
       transform: translateX(100vw)
     }
     &.ng-enter-active {
+      opacity: 1;
       transform: translateX(0)
     }
     &.ng-leave {
+      opacity: 1;
       transform: translateX(0)
     }
     &.ng-leave-active {
+      opacity: 1;
       transform: translateX(-100vw)
     }
   }
