feat: diseño vista ptoducto

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -22,6 +22,7 @@
 @import 'pages/common/animaciones';
 @import 'pages/common/app';
 @import 'pages/common/menu';
+@import 'pages/common/lista';
 @import 'pages/home';
 @import 'pages/productos';
 @import 'pages/categoria';
