--- a/src/js/component/common/lista/lista.html
+++ b/src/js/component/common/lista/lista.html
@@ -1,8 +1,14 @@
 <main class="lista">
-  <a ng-href="#{{$ctrl.volver}}">x</a>
-  <p>{{$ctrl.newTipo}}</p>
-  <a ng-repeat="item in $ctrl.items" href="#/productos/{{item.categoria}}/{{item.id}}" >
-    <img src="" alt="">
-    <h2>{{item.titulo}}</h2>
-  </a>
+  <a ng-href="#{{$ctrl.volver}}"></a>
+  <div>
+    <span>{{$ctrl.newTipo}}</span>
+  </div>
+  <ul>
+    <li ng-repeat="item in $ctrl.items" >
+      <a ng-href="#/productos/{{item.categoria}}/{{item.id}}">
+        <img ng-src="./img/productos/{{item.categoria}}/{{item.imagen}}.jpg" alt="producto">
+        <h2>{{item.titulo}}</h2>
+      </a>
+    </li>   
+  </ul>
 </main>
