--- a/src/js/component/pages/categoria/categoria.html
+++ b/src/js/component/pages/categoria/categoria.html
@@ -1,6 +1,12 @@
 <main class="categoria">
-  <section class="categoria-titulo">
-    {{$ctrl.categoria}}
+  <div class="categoria-menu">
+    <ul>
+      <li ng-repeat="categoria in $ctrl.categorias">
+        <a>{{categoria.nombre}}</a></li>
+    </ul>
+  </div>
+  <section class="categoria-fondo">
+    <h1>{{$ctrl.categoria}}</h1>
   </section>
   <lista tipo="producto" url={{$ctrl.urlAll}}></lista>
 </main>
