--- a/src/js/component/pages/home/home.html
+++ b/src/js/component/pages/home/home.html
@@ -1,9 +1,9 @@
 <main class="home">
   
   <section class="home-nav">
-    <a ng-href="#/productos">productos</a>
-    <a ng-href="#/recetas">recetas</a>
-    <a ng-href="#/contacto">contacto</a>
+    <a ng-href="#/productos">Productos</a>
+    <a ng-href="#/recetas">Recetas</a>
+    <a ng-href="#/contacto">Contacto</a>
   </section>
 
   <section class="home-nav-secondary" ng-class="{'active': $ctrl.active}">
