--- a/src/css/pages/common/lista.scss
+++ b/src/css/pages/common/lista.scss
@@ -3,7 +3,6 @@
   border-left: solid 1px $color-base;
   height: 100vh;
   position: absolute;
-  right: -15rem;
   right: 0;
   top: 0;
   width: 15rem;
@@ -35,6 +34,8 @@
     width: 2.5rem;
     @extend .wrapper;
     line-height: 0;
+    visibility: hidden;
+    opacity: 0;
     &:after{
       content: '\f00d';
       font-family: 'icomoon'
