--- a/src/js/component/common/lista/lista.html
+++ b/src/js/component/common/lista/lista.html
@@ -1,13 +1,18 @@
 <main class="lista">
-  <a ng-href="#{{$ctrl.volver}}"></a>
+  <a ng-click="$ctrl.back()"></a>
   <div>
     <span>{{$ctrl.newTipo}}</span>
   </div>
   <ul>
-    <li ng-repeat="item in $ctrl.items" >
-      <a ng-href="#/productos/{{item.categoria}}/{{item.id}}">
+    <li ng-repeat="item in $ctrl.items">
+      <a ng-href="#/productos/{{item.categoria}}/{{item.id}}" ng-if="$ctrl.newTipo == 'productos'">
         <img ng-src="./img/productos/{{item.categoria}}/{{item.imagen}}.jpg" alt="producto">
-        <h2>{{item.titulo}}</h2>
+        <h2>{{item.titulo}}</h2> 
+      </a>
+
+      <a ng-href="#/recetas/{{item.id}}" ng-if="$ctrl.newTipo != 'productos'">
+        <img ng-src="./img/imagenes-recetas/{{item.imagen}}.jpg" alt="receta">
+        <h2>{{item.titulo}}</h2> 
       </a>
     </li>   
   </ul>
