--- a/src/js/component/common/menu/menu.html
+++ b/src/js/component/common/menu/menu.html
@@ -6,8 +6,8 @@
     <span ng-click="$ctrl.menuFullscreen()" ng-class="{'activo' : $ctrl.toggleFullscreen}">MENÚ</span>
   </section>
   <section class="menu-modal" ng-class="{'activo' : $ctrl.toggleFullscreenActive}">
-    <a ng-href="#/productos">productos</a>
-    <a ng-href="#/recetas">recetas</a>
-    <a ng-href="#/contacto">contacto</a>
+    <a ng-href="#/productos">Productos</a>
+    <a ng-href="#/recetas">Recetas</a>
+    <a ng-href="#/contacto">Contacto</a>
   </section>
 </main>
