--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -19,6 +19,7 @@
 @import 'components/sliders';
 
 
+@import 'pages/common/loading';
 @import 'pages/common/animaciones';
 @import 'pages/common/app';
 @import 'pages/common/menu';
