--- a/src/js/component/pages/home/home.html
+++ b/src/js/component/pages/home/home.html
@@ -1,4 +1,9 @@
 <main class="home">
+
+  <div class="sociales">
+    <a target="_blank" href="http://fb.com" class="icon-facebook"></a>
+    <a target="_blank" href="http://instagram.com" class="icon-instagram"></a>
+  </div>
   
   <section class="home-nav">
     <a ng-href="#/productos">Productos</a>
