--- a/src/js/component/pages/receta/receta.html
+++ b/src/js/component/pages/receta/receta.html
@@ -7,7 +7,7 @@
                  style="background-image: url('../img/imagenes-recetas/{{$ctrl.producto.imagen}}.jpg')"></div>
             <div class="receta-descripcion">
               <h1>{{$ctrl.producto.titulo}}</h1>
-              <p>INGREDIENTES</p>
+              <span>INGREDIENTES</span>
               <p>{{$ctrl.producto.ingredientes}}</p>
             </div>
           </section>
