--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -86,3 +86,22 @@
 
 
 }
+.sociales{
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  display: flex;
+  a{
+    background-color: white;
+    border-radius: 50%;
+    font-size: 1.2rem;
+    height: 2rem;
+    line-height: 1;
+    width: 2rem;
+    color: rgb(119, 119, 119);
+    @extend .wrapper;
+    &:not(:last-child){
+      margin-right: 1rem;
+    }
+  }
+}
