feat: url recetal html

--- a/src/js/component/pages/receta/receta.html
+++ b/src/js/component/pages/receta/receta.html
@@ -4,7 +4,7 @@
         <div>
           <section class="producto-titulo">
             <div class="producto-titulo-fondo" 
-                 style="background-image: url('../img/imagenes-recetas/{{$ctrl.producto.imagen}}.jpg')"></div>
+                 style="background-image: url('./img/imagenes-recetas/{{$ctrl.producto.imagen}}.jpg')"></div>
             <div class="receta-descripcion">
               <h1>{{$ctrl.producto.titulo}}</h1>
               <span>INGREDIENTES</span>
