--- a/src/js/component/pages/producto/producto.html
+++ b/src/js/component/pages/producto/producto.html
@@ -5,7 +5,7 @@
         <section class="producto-titulo">
           <div class="producto-titulo-fondo"></div>
           <h1>{{$ctrl.producto.titulo}}</h1>
-          <p>tips</p>
+          <p>Características Del Producto</p>
         </section>
         <div class="separacion">
           <svg  x="0px" y="0px" viewBox="0 381.1 200 18.9" >
